# vibemate

./: AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml
docs/: configuration.md  how_to_add_agent.md  how_to_test_routing_rules.md  system_design.md  troubleshooting.md
docs/agents/: claude_code.md  codex.md
docs/release_notes/: rel_v0.1.0.md  rel_v0.1.1.md  rel_v0.2.0.md  rel_v0.2.1.md  rel_v0.2.2.md  rel_v0.2.3.md  rel_v0.3.0.md
src/: error.rs  main.rs
src/agent/: mod.rs  registry.rs  traits.rs  types.rs
src/agent/auth/: callback.rs  mod.rs  pkce.rs  token.rs
src/agent/impls/: claude.rs  codex.rs  cursor.rs  gemini.rs  mod.rs
src/agent/usage_source/: claude_cli.rs  claude_local.rs  claude_web.rs  cli_runner.rs  codex_cli.rs  codex_local.rs  codex_web.rs  cookie.rs  cursor_web.rs  gemini_local.rs  local_cost.rs  mod.rs
src/cli/: config.rs  dashboard.rs  login.rs  mod.rs  proxy.rs  router.rs  usage.rs
src/config/: mod.rs  types.rs
src/model_router/: handler.rs  logging.rs  middleware.rs  mod.rs  router.rs  server.rs  stream.rs
src/oauth/: callback.rs  claude.rs  codex.rs  mod.rs  pkce.rs  token.rs
src/provider/: mod.rs
src/proxy/: handler.rs  middleware.rs  server.rs  stream.rs
src/tui/: app.rs  ui.rs
src/tui/widgets/: logs.rs  mod.rs  status.rs  usage.rs
