[package]
name = "vibemate"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
async-stream = "0.3"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
async-trait = "0.1"
